// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basics Generate a element from a style 1`] = `
<div
  name="title"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  basic
</div>
`;

exports[`Basics Generate an implied named element 1`] = `
<table
  name="table"
  style={
    Object {
      "borderCollapse": "collapse",
      "width": "100%",
    }
  }
>
  <tr
    name="tr"
    style={
      Object {
        "borderBottom": "thick solid red",
      }
    }
  >
    <td
      name="td"
      style={
        Object {
          "border": "1px solid #dddddd",
          "padding": "8px",
        }
      }
    >
      Maria Anders
    </td>
    <td
      name="td"
      style={
        Object {
          "border": "1px solid #dddddd",
          "padding": "8px",
        }
      }
    >
      Germany
    </td>
  </tr>
  <tr
    name="tr"
    style={
      Object {
        "borderBottom": "thick solid red",
      }
    }
  >
    <td
      name="td"
      style={
        Object {
          "border": "1px solid #dddddd",
          "padding": "8px",
        }
      }
    >
      Francisco Chang
    </td>
    <td
      name="td"
      style={
        Object {
          "border": "1px solid #dddddd",
          "padding": "8px",
        }
      }
    >
      Mexico
    </td>
  </tr>
  <tr
    name="tr"
    style={
      Object {
        "borderBottom": "thick solid red",
      }
    }
  >
    <td
      name="td"
      style={
        Object {
          "border": "1px solid #dddddd",
          "padding": "8px",
        }
      }
    >
      Roland Mendel
    </td>
    <td
      name="td"
      style={
        Object {
          "border": "1px solid #dddddd",
          "padding": "8px",
        }
      }
    >
      Austria
    </td>
  </tr>
</table>
`;

exports[`Basics Passing Style and Funtion as arguments 1`] = `
<div
  name="title"
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  basic
</div>
`;

exports[`Basics Reusing elements 1`] = `
<div>
  <span
    name="title"
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    foo
  </span>
  <span
    name="title"
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    bar
  </span>
</div>
`;

exports[`Basics Sharing Style 1`] = `
<div>
  <div
    name="title"
    style={
      Object {
        "backgroundColor": "red",
        "textShadow": "2px 2px 2px black",
      }
    }
  >
    basic
  </div>
  <span
    style={
      Object {
        "color": "red",
        "textShadow": "2px 2px 2px black",
      }
    }
  >
    content
  </span>
</div>
`;

exports[`Basics Wrapping an existing element 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  Hello, 
  basic
</div>
`;

exports[`Basics ⚠ Passing Style and Funtion as Array 1`] = `
<div
  name="title"
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  basic
</div>
`;

exports[`CSS Helpers Css Selector 1`] = `
<div>
  <style>
     .react-outline-:hover{ color:blue; } .react-outline-{text-shadow:1px 1px 10px #000; color:white; cursor:pointer; }
  </style>
  <div
    className="react-outline-"
    name="title"
  >
    <div>
      foo
    </div>
    <div>
      bar
    </div>
    <div>
      baz
    </div>
  </div>
</div>
`;

exports[`CSS Helpers Css Source 1`] = `
<div>
  <style>
     .react-outline-:hover{ color:blue; } .react-outline-{text-shadow:1px 1px 10px #000; color:white; cursor:pointer; } .title{ font-size: 25px; background-color: yellow; } 
  </style>
  <div
    className="title"
  >
    basic
  </div>
</div>
`;

exports[`CSS Helpers Dynamic Css Selector 1`] = `
<div>
  <style>
     .react-outline-:hover{ color:blue; } .react-outline-{text-shadow:1px 1px 10px #000; color:white; cursor:pointer; }
  </style>
  <div
    className="react-outline-"
    css={
      Object {
        "div:nth-child(even)": Object {
          "color": "red",
        },
      }
    }
    name="title"
  >
    <div>
      foo
    </div>
    <div>
      bar
    </div>
    <div>
      baz
    </div>
  </div>
</div>
`;

exports[`CSS Helpers Media Query 1`] = `
<div>
  <style>
     .react-outline-:hover{ color:blue; } .react-outline-{text-shadow:1px 1px 10px #000; color:white; cursor:pointer; }
  </style>
  <div
    className="react-outline-"
    name="title"
  >
    basic
  </div>
</div>
`;

exports[`CSS Helpers Mouse hover 1`] = `
<div>
  <style>
     .react-outline-:hover{ color:blue; } .react-outline-{text-shadow:1px 1px 10px #000; color:white; cursor:pointer; }
  </style>
  <div
    className="react-outline-"
    name="title"
  >
    basic
  </div>
</div>
`;

exports[`Combine styles In a generated element 1`] = `
<div
  name="title"
  style={
    Object {
      "color": "#f00",
      "fontSize": "25px",
    }
  }
>
  basic
</div>
`;

exports[`Combine styles Logic function With Generate Element 1`] = `
<div
  name="title"
  style={
    Object {
      "color": "#f00",
      "fontSize": "25px",
    }
  }
>
  basic
</div>
`;

exports[`Combine styles Passing a Style objct to a generated element 1`] = `
<div
  name="title"
  style={
    Object {
      "color": "red",
      "fontSize": 25,
    }
  }
>
  basic
</div>
`;

exports[`Combine styles Using a prop flag 1`] = `
<div
  name="title"
  style={
    Object {
      "color": "#f00",
      "fontSize": "25px",
    }
  }
>
  basic
</div>
`;

exports[`Style Functions Function with generated elements 1`] = `
<div
  name="content"
  style={
    Object {
      "backgroundColor": "red",
      "height": "300px",
    }
  }
>
   
  <span
    name="cell"
    style={
      Object {
        "fontSize": -5,
      }
    }
    styles={true}
  >
    foo
  </span>
  <span
    name="cell"
    style={
      Object {
        "fontSize": -5,
      }
    }
    styles={false}
  >
    bar
  </span>
  <span
    name="cell"
    style={
      Object {
        "fontSize": -5,
      }
    }
    styles={undefined}
  >
    cat
  </span>
   
</div>
`;
